# rcppredis

./: .Rbuildignore  .gitignore  .gitmodules  .travis.yml  ChangeLog  DESCRIPTION  LICENSE  NAMESPACE  README.Rmd  README.md  cleanup  configure  configure.ac  configure.in
.github/workflows/: ci.yaml
R/: RcppExports.R  internal.R  pubsub.R  redis.R  redisAPPEND.R  redisAUTH.R  redisBGREWRITEAOF.R  redisBGSAVE.R  redisBITCOUNT.R  redisBITOP.R  redisBLPOP.R  redisBRPOP.R  redisBRPOPLPUSH.R  redisCLIENT_GETNAME.R  redisCLIENT_KILL.R  redisCLIENT_LIST.R  redisCLIENT_SETNAME.R  redisCONFIG_GET.R  redisCONFIG_RESETSTAT.R  redisCONFIG_REWRITE.R  redisCONFIG_SET.R  redisConnect.R  redisDBSIZE.R  redisDEBUG_OBJECT.R  redisDEBUG_SEGFAULT.R  redisDECR.R  redisDECRBY.R  redisDEL.R  redisDISCARD.R  redisDUMP.R  redisECHO.R  redisEVAL.R  redisEVALSHA.R  redisEXEC.R  redisEXISTS.R  redisEXPIRE.R  redisEXPIREAT.R  redisFLUSHALL.R  redisFLUSHDB.R  redisGET.R  (+116 more)
demo/: 00Index  quickTest.R  simDemo.R  simpleBenchmark.R  simpleBenchmark2.R  simpleRedisClient.R  spDemo.R
inst/: NEWS.Rd  gen_function.R  hiredis.COPYING  template.R  template.cpp
inst/demos/: queueDemo.R  spDemo.R
inst/examples/: readC++.cpp  readPython.py  readR.R  readShell.sh  runAll.sh  writeC++.cpp  writePython.py  writeR.R  writeShell.sh
inst/pubsub/: README.md  intraday-ES-from-Redis.r  intraday-ES-to-Redis.r  intraday-GLOBEX-from-Redis.r  intraday-GLOBEX-to-Redis.r  pruneRedis.r
inst/tests/: runit.basicRtests.R  runit.basicTest.R  runit.execTests.R  runit.execvTests.R  runit.existsTests.R  runit.expireTests.R  runit.hashTests.R  runit.listTests.R  runit.serverIssues.R  runit.setTests.R
inst/tinytest/: test_basics.R  test_exec.R  test_execv.R  test_exists.R  test_expire.R  test_hash.R  test_list.R  test_server_issues.R  test_set.R
man/: listen.Rd  redisAPPEND.Rd  redisAUTH.Rd  redisBGREWRITEAOF.Rd  redisBGSAVE.Rd  redisBITCOUNT.Rd  redisBITOP.Rd  redisBLPOP.Rd  redisBRPOP.Rd  redisBRPOPLPUSH.Rd  redisCLIENT_GETNAME.Rd  redisCLIENT_KILL.Rd  redisCLIENT_LIST.Rd  redisCLIENT_SETNAME.Rd  redisCONFIG_GET.Rd  redisCONFIG_RESETSTAT.Rd  redisCONFIG_REWRITE.Rd  redisCONFIG_SET.Rd  redisClose.Rd  redisCommand.Rd  redisConnect.Rd  redisDBSIZE.Rd  redisDEBUG_OBJECT.Rd  redisDEBUG_SEGFAULT.Rd  redisDECR.Rd  redisDECRBY.Rd  redisDEL.Rd  redisDISCARD.Rd  redisDUMP.Rd  redisECHO.Rd  redisEVAL.Rd  redisEVALSHA.Rd  redisEXEC.Rd  redisEXISTS.Rd  redisEXPIRE.Rd  redisEXPIREAT.Rd  redisFLUSHALL.Rd  redisFLUSHDB.Rd  redisGET.Rd  redisGETBIT.Rd  (+117 more)
src/: Makevars  Makevars.in  Makevars.ucrt  Makevars.win  RcppExports.cpp  RcppModule.cpp  RcppModule.hpp  Redis.cpp  RredisContext.cpp  RredisContext.hpp  init.c  libsock.c  redisCommand.cpp  redisConnect.cpp  redisTests.cpp  serialize.cpp  util.hpp
src/hiredis/: GNUmakefile  Makefile  hiredis.c
tests/: pubsub.R  runUnitTests.R  simpleRedisClient.R  synchronize.test.R  tinytest.R
tools/: winlibs.R
vignettes/: market-monitoring.Rnw  redis-introduction.Rnw
vignettes/rmd/: redis-intro.Rmd  redis-monitoring.Rmd  redis.bib
